<resources>
    <string name="app_name">lab1</string>
    <string name="notes">Notes</string>
    <string name="friends">Friends</string>
    <string name="school">School</string>
    <string name="close_app">Close App</string>
    <string name="add_info">Add Info</string>
    <string name="view_info">View Info</string>
    <string name="delete_all_info">Delete All Info</string>
    <string name="back">Back</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="modify">Modify</string>
    <string name="view_all">View All</string>
    <string name="delete">Delete</string>
    <string name="delete_all_friends">Delete All Friends</string>
    <string name="add_grade">Add Grade</string>
    <string name="compute_average">Compute Average</string>
    <string name="enter_file_name">Enter file name</string>
    <string name="enter_file_content">Enter file content</string>
    <string name="confirm">Confirm</string>
</resources>