<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".NotesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/add_grades_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_grade" />

        <Button
            android:id="@+id/compute_average_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/compute_average" />


        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>